--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <!-- Primary Meta Tags -->
     <title>How Episodic Horror Games Build Long-Term Player Engagement</title>
     <meta name="title" content="How Episodic Horror Games Build Long-Term Player Engagement">
-    <meta name="description" content="Explore how episodic horror games keep players engaged over time through storytelling, pacing, and anticipation, creating lasting interest beyond a single release.">
+    <meta name="description" content="Explore how episodic horror games keep players engaged through storytelling and creating lasting interest beyond a single release.">
     <meta name="keywords" content="episodic horror games, player engagement strategies, horror game storytelling, chapter-based game design, narrative-driven games, suspense pacing">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="author" content="Horror Gaming Research Institute">
-    <meta name="google-site-verification" content="your-verification-code">
+    <meta name="google-site-verification" content="DL6bAbYedDxYTMAZG0VjOdQ5N8QyDctp4q_K2PKTV08">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://apkjesus.com/poppy-playtime-chapter-6/">
