--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                 <h2 class="section-title">Community Interaction and Speculation</h2>
             </div>
             <div class="section-content">
-                <p>Episodic horror games naturally encourage discussion. Gaps between chapters give players time to share interpretations, predict outcomes, and analyze hidden details. Online conversations become part of the experience, deepening engagement and expanding the game's presence beyond the screen.</p>
+                <p>Episodic horror games naturally encourage discussion. Gaps between chapters give players time to share <a href="https://obpanel.stuartd929.workers.dev/" class="horror-link">interpretations</a>, predict outcomes, and analyze hidden details. Online conversations become part of the experience, deepening engagement and expanding the game's presence beyond the screen.</p>
                 
                 <div class="engagement-features">
                     <div class="feature-item">
